hphp/hack/test/typecheck/inout/bad_inout_use_arg4.php
<?hh

function f(inout int $i): void {}

class C {
  private vec<int> $x = vec[3, 42];

  public function test(): void {
    f(inout $this->x[1]);
  }
}
